feat: new api tags
