# atoma-proxy/src/server/components/openapi.rs
@@ -19,17 +19,17 @@ pub fn openapi_routes() -> Router {
             (path = HEALTH_PATH, api = HealthOpenApi, tags = ["Health"]),
             (path = MODELS_PATH, api = ModelsOpenApi, tags = ["Models"]),
             (path = NODE_PUBLIC_ADDRESS_REGISTRATION_PATH, api = NodePublicAddressRegistrationOpenApi, tags = ["Node Public Address Registration"]),
-            (path = CHAT_COMPLETIONS_PATH, api = ChatCompletionsOpenApi, tags = ["Chat Completions"]),
+            (path = CHAT_COMPLETIONS_PATH, api = ChatCompletionsOpenApi, tags = ["Chat"]),
             (path = EMBEDDINGS_PATH, api = EmbeddingsOpenApi, tags = ["Embeddings"]),
-            (path = IMAGE_GENERATIONS_PATH, api = ImageGenerationsOpenApi, tags = ["Image Generations"]),
+            (path = IMAGE_GENERATIONS_PATH, api = ImageGenerationsOpenApi, tags = ["Images"]),
         ),
         tags(
             (name = "Health", description = "Health check"),
-            (name = "Chat Completions", description = "Chat completions"),
-            (name = "Models", description = "Models"),
+            (name = "Chat", description = "OpenAI's API chat completions v1 endpoint"),
+            (name = "Models", description = "OpenAI's API models v1 endpoint"),
             (name = "Node Public Address Registration", description = "Node public address registration"),
             (name = "Embeddings", description = "OpenAI's API embeddings v1 endpoint"),
-            (name = "Image Generations", description = "OpenAI's API image generations v1 endpoint"),
+            (name = "Images", description = "OpenAI's API images v1 endpoint"),
         ),
         servers(
             (url = "http://localhost:8080"),
